item list and list item components consuming mock

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "fs": "0.0.2",
     "jade": "^1.7.0",
     "path": "^0.4.9",
-    "react": "^0.12.1"
+    "react": "^0.12.1",
+    "superagent": "^0.21.0"
   },
   "devDependencies": {
     "6to5": "^1.12.20",
