--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "devDependencies": {
     "6to5": "^1.12.20",
+    "gulp": "^3.8.10",
+    "gulp-sass": "^1.1.0",
+    "node-neat": "^1.3.0",
     "supervisor": "^0.6.0"
   },
   "scripts": {
